# synapseconvert

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  synapse_upconvert.py
synapseconvert/: downconvert.py  upconvert.py  ~$test.xlsx
synapseconvert.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
templates/: sample.json  sample.xlsx
