# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synapseconvert"
version = "0.1.2"
description = "Tools for converting Synapse RTP (research transport protocol) JSON to spreadsheet and back."
authors = [
  { name="Samuel Baylis", email="request@biblicalstory.org" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pandas",
  "openpyxl"
]

[project.scripts]
synapse-upconvert = "synapse_tools.upconvert:main"
synapse-downconvert = "synapse_tools.downconvert:main"